--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -374,7 +374,7 @@
   number = {4},
   urldate = {2017-02-22},
   journal = {Canadian Journal of Fisheries and Aquatic Sciences},
-  author = {Stewart, Ian J. and Hamel, Owen S.},
+  author = {Stewart, I.J. and Hamel, O.S.},
   month = apr,
   year = {2014},
   pages = {581--588}
