--- a/report/sa4ss_glossaries.tex
+++ b/report/sa4ss_glossaries.tex
@@ -190,7 +190,7 @@
 \newacronym{ofl}{OFL}{overfishing limit}
 \newacronym{opm}{OPM}{Office of Personnel  Management}
 \newacronym{orbs}{ORBS}{Oregon Department of Fish and Wildlife Oregon Recreational Boat Survey}
-\newacronym{osp}{OSP}{Washington Department of Fish and Wildlife Ocean Sampling Program}
+\newacronym{osp}{OSP}{WDFW Ocean Sampling Program}
 \newacronym{oy}{OY}{optimum yield}
 \newacronym{pacfin}{PacFIN}{Pacific Fisheries Information Network}
 \newacronym{pbr}{PBR}{Potential Biological Removal}
