--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -358,7 +358,7 @@ indices <- read.csv(here::here("report", "figures", "sensitivities", "indices_ta
 #indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
 #names(indices) <- gsub("X..", "", names(indices))
 
-names(indices) <- c("Label","Base","- CA REC Index","- OR REC Index","- WA REC Index","- CA CPFV Index","- ORFS Index","- Triennial Index","- WCGBTS Index","- IPHC Index","No indices")
+names(indices) <- c("Label","Base","- CA REC","- OR REC","- WA REC","- CA CPFV","- ORFS","- Triennial","- WCGBTS","- IPHC","No indices")
 
 table_sens(indices)
 
@@ -384,7 +384,7 @@ len_comps <- read.csv(here::here("report", "figures", "sensitivities", "length_c
 #indices_and_comps <- inner_join(indices, comps, by = c("Label", "Base"))
 #names(comps) <- gsub("X..", "", names(comps))
 
-names(len_comps) <-c("Label","Base","- CA TWL length comps","- CA NONTWL length comps","- CA REC length comps","- ORWA TWL length comps","- ORWA NONTWL length comps","- OR REC length comps","- WA REC length comps","- CA CPFV length comps","- ORFS length comps","- Triennial length comps","- WCGBTS length comps","- IPHC length comps","No length comps")
+names(len_comps) <-c("Label","Base","- CA TWL","- CA NONTWL","- CA REC","- ORWA TWL","- ORWA NONTWL","- OR REC","- WA REC","- CA CPFV","- ORFS","- Triennial","- WCGBTS","- IPHC","No length comps")
 
 table_sens(len_comps)
 
@@ -398,7 +398,6 @@ cat("\n\\end{landscape}\n")
 #| echo: false
 #| message: false
 #| warning: false
-#| out.width: "\\textwidth"
 #| results: "asis"
 #| tbl-cap: "Base model sensitivity to the removal of data sources (age compositional data)."
 
@@ -407,7 +406,7 @@ cat("\\begin{landscape}\n")
 source(here::here("Rcode/table_sens.R"))
 age_comps <- read.csv(here::here("report", "figures", "sensitivities", "age_comps_table.csv"))
 
-names(age_comps) <-c("Label","Base","- CA NONTWL age comps","- CA REC age comps","- ORWA TWL age comps","- ORWA NONTWL age comps","- OR REC age comps","- WA REC age comps","- WCGBTS age comps","- IPHC age comps","No age comps","McAllister & Ianelli")
+names(age_comps) <-c("Label","Base","- CA NONTWL","- CA REC","- ORWA TWL","- ORWA NONTWL","- OR REC","- WA REC","- WCGBTS","- IPHC","No age comps","McAllister & Ianelli")
 
 table_sens(age_comps)
 
