--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -39,11 +39,11 @@ Updated fishery-dependent data, including removals, length and age compositions,
 
 A summary of total removals are provided in @tbl-all_removals and @fig-catch.
 
-Recent commercial landings (2017-2024) were obtained from [\gls{pacfin}](www.pacfin.psmfc.org) for California, Oregon and Washington. For the period from 2016 through 2023, updated West Coast Groundfish Observer Program (\gls{wcgop}) discard estimates were added to \gls{pacfin} landings by adding the annual dead discard mortality rate for the commercial sector in the \gls{gemm} recorded discards to obtain the total catch of Yelloweye Rockfish within commercial fleets. At this time no \gls{wcgop} data were available for 2024.  
+Recent commercial landings (2017-2024) were obtained from [\gls{pacfin}](www.pacfin.psmfc.org) for California, Oregon and Washington. For the period from 2016 through 2023, updated \gls{wcgop} discard estimates were added to \gls{pacfin} landings by adding the annual dead discard mortality rate for the commercial sector in the \gls{gemm} recorded discards to obtain the total catch of Yelloweye Rockfish within commercial fleets. At this time no \gls{wcgop} data were available for 2024.  
 
 Bycatch for the At-Sea Pacific Hake fleet (A-SHOP) was updated from 2017 through 2024.
 
-Recreational removals from [\gls{recfin}](www.recfin.org) were updated for California, Oregon and Washington from 2017 - 2024. \gls{recfin} removals include an estimate of discard mortality and represent total estimated removals. The Oregon Department of Fish and Wildlife (\gls{odfw}) provided updated historical recreational removals for Oregon from 1979 through 2000 [@Whitman_2024]. The Washington Department of Fish and Wildlife (\gls{wdfw}) provided updated historical recreational removals (1967-1989) and \gls{osp} estimates (1990-2001). The historical recreational removals for 1971, 1974, and 1979 were not available and were filled in as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For \gls{osp} catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. \gls{wdfw} also provided updated catch estimates for 2002-2004, which did not include discard mortality. To adjust for this, we multiplied the average discard mortality rate from the following five years (2005-2009) by the total discards to calculate total mortality for those years.  
+Recreational removals from [\gls{recfin}](www.recfin.org) were updated for California, Oregon and Washington from 2017 - 2024. \gls{recfin} removals include an estimate of discard mortality and represent total estimated removals. The (\gls{odfw}) provided updated historical recreational removals for Oregon from 1979 through 2000 [@Whitman_2024]. The Washington Department of Fish and Wildlife (\gls{wdfw}) provided updated historical recreational removals (1967-1989) and \gls{osp} estimates (1990-2001). The historical recreational removals for 1971, 1974, and 1979 were not available and were filled in as the average of the two preceding and two following years. Historical data were filtered to marine catch areas 1-4. For \gls{osp} catch estimates, data included marine catch areas 1-4, up to the Bonilla-Tatoosh line. \gls{wdfw} also provided updated catch estimates for 2002-2004, which did not include discard mortality. To adjust for this, we multiplied the average discard mortality rate from the following five years (2005-2009) by the total discards to calculate total mortality for those years.  
 
 ### Fishery-Dependent Length and Age Compositions {#sec-fd_comps}
 
@@ -89,9 +89,9 @@ Two fishery-dependent indices of abundance were updated with new data and up-to-
 
 The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) index was updated from the previous Yelloweye Rockfish assessment, and updated drift-level catch-per-unit-effort data was obtained from ODFW through the end of 2024. The database contains information on catch by species (number of retained and released fish), effort (angler hours), sample depth, and bag limits and other relevant regulations [@monk_documentation_2013].  
 
-The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extremely low sample sizes (<50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered data set included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish [@tbl-yelloweye_percent_pos_ORFS]. 
+The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include removing drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fm buffer). Additionally, years with extremely low sample sizes (<50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered data set included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish [@tbl-yelloweye_percent_pos_ORFS]. 
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using \gls{sdmtmb} (version 0.6.0; @Anderson_2024_SRP) to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC [@tbl-yelloweye_model_selection_ORFS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orfs_qqplot). The index of abundance is shown in @fig-ORFS_index. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed [@fig-ORFS_comp]. The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using \gls{sdmtmb} version 0.6.0 [@Anderson_2024_SRP]) to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC [@tbl-yelloweye_model_selection_ORFS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orfs_qqplot). The index of abundance is shown in @fig-ORFS_index. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed [@fig-ORFS_comp]. The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
 
 #### Oregon ORBS Dockside (release only) CPUE, 2004-2024
 
@@ -99,7 +99,7 @@ The \gls{orbs} dockside index for Oregon was updated for this assessment. CPUE, 
 
 The unfiltered data set contained 504,128 trips from 2001 - 2024. Since the previous Yelloweye assessment, multiple data filters have been standardized, which are very similar to the 2017 assessment, and are applied to \gls{orbs} trip-level data to remove outliers and data unsuitable for an index. For this index, the time period was restricted to years when retention of Yelloweye Rockfish was prohibited, which began on January 1, 2004. There were two differences in the filtering in this updated index. First, the previous index began in 2005, which was determined to be an error in the timing of the implementation of prohibited status for Yelloweye. Given that prohibition was in effect on January 1, the year 2004 is included in this updated index. The second difference in filtering is the elimination of the Stephens-MacCall filter in the updated index. This filter has not been used for several assessment cycles, based on a recommendation from NWFSC staff (pers. comm. A. Whitman, ODFW). The final dataset included 133,039 trips from 2004 – 2024 with an overall encounter rate of 7.4% [@tbl-yelloweye_percent_pos_ORBS].
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 \gls{orbs} index, apart from the open depths of the fishery. The final model in 2017 included boat type, port and year. Negative binomial models were fit in \gls{sdmtmb} (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series [@tbl-yelloweye_model_selection_ORBS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb}.(@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb}, version 0.6.0; @Anderson_2024_SRP). To bridge this change, the 2017 model index structure was applied to the current dataset using \gls{sdmtmb} and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two \gls{sdmtmb} indices; however, this appears to be largely driven by the updated modeling approach.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40 fm), and boat type. These are the same covariates evaluated in the 2017 \gls{orbs} index, apart from the open depths of the fishery. The final model in 2017 included boat type, port and year. Negative binomial models were fit in \gls{sdmtmb} (Version 0.6.0) to the trip-level data (catch with a log offset for adjusted angler hours). The final model selected includes year, month, port, boat type and open fishery depths, which was the best fit model by AIC in this series [@tbl-yelloweye_model_selection_ORBS]. Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orbs_qq). The index of abundance in shown in @fig-ORBS_index. ODFW no longer maintains the deltaGLM code that was used to develop the 2017 index and so the index was updated to use the currently accepted modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb}, version 0.6.0; @Anderson_2024_SRP). To bridge this change, the 2017 model index structure was applied to the current data set using \gls{sdmtmb} and compared to the deltaGLM index used in the 2017 assessment and the current recommended updated index in @fig-ORBS_comp. There are some differences observed in 2005 – 2009 between the deltaGLM index and the two \gls{sdmtmb} indices; however, this appears to be largely driven by the updated modeling approach.
 
 ## Fishery-Independent Data
 
