--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -650,7 +650,7 @@ Year & Spawning output & Lower Interval. & Upper Interval. & Fraction Unfished &
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts7_Spawning_output_with_95_intervals.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts7_Spawning_output_with_95_intervals.png}}
 
 }
 
@@ -664,7 +664,7 @@ interval (dashed lines). Spawning output is expressed in million eggs.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts9_Relative_spawning_output_intervals.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts9_Relative_spawning_output_intervals.png}}
 
 }
 
@@ -677,7 +677,7 @@ output for the base model.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts10_Relative_spawning_output.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts10_Relative_spawning_output.png}}
 
 }
 
@@ -736,7 +736,7 @@ Year & Recruitment (1,000s) & Lower Interval (1,000s) & Upper Interval (1,000s) 
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts11_Age-0_recruits_(1000s)_with_95_asymptotic_intervals.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts11_Age-0_recruits_(1000s)_with_95_asymptotic_intervals.png}}
 
 }
 
@@ -750,7 +750,7 @@ intervals (vertical lines).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/recdevs2_withbars.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/recdevs2_withbars.png}}
 
 }
 
@@ -776,7 +776,7 @@ Table~\ref{tbl-es-spr}).
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/SPR4_phase.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/SPR4_phase.png}}
 
 }
 
@@ -1149,8 +1149,8 @@ have continued, though as the stock has begun to recover, the rebuilding
 plan has allowed for small catch increases that have slightly loosened
 the constraining impact of this species. However, this section is not
 required for an update assessment; please refer to the most recent full
-assessment (Gertseva and Cope 2017) and \#sec-mgmt for additional
-information.
+assessment (Gertseva and Cope 2017) and Section~\ref{sec-mgmt} for
+additional information.
 
 \subsection{Management performance}\label{sec-mgmt}
 
@@ -1274,12 +1274,12 @@ and Figure~\ref{fig-catch}.
 
 Recent commercial landings (2017-2024) were obtained from
 \href{www.pacfin.psmfc.org}{\gls{pacfin}} for California, Oregon and
-Washington. For the period from 2016 through 2023, updated West Coast
-Groundfish Observer Program (\gls{wcgop}) discard estimates were added
-to \gls{pacfin} landings by adding the annual dead discard mortality
-rate for the commercial sector in the \gls{gemm} recorded discards to
-obtain the total catch of Yelloweye Rockfish within commercial fleets.
-At this time no \gls{wcgop} data were available for 2024.
+Washington. For the period from 2016 through 2023, updated \gls{wcgop}
+discard estimates were added to \gls{pacfin} landings by adding the
+annual dead discard mortality rate for the commercial sector in the
+\gls{gemm} recorded discards to obtain the total catch of Yelloweye
+Rockfish within commercial fleets. At this time no \gls{wcgop} data were
+available for 2024.
 
 Bycatch for the At-Sea Pacific Hake fleet (A-SHOP) was updated from 2017
 through 2024.
@@ -1287,20 +1287,20 @@ through 2024.
 Recreational removals from \href{www.recfin.org}{\gls{recfin}} were
 updated for California, Oregon and Washington from 2017 - 2024.
 \gls{recfin} removals include an estimate of discard mortality and
-represent total estimated removals. The Oregon Department of Fish and
-Wildlife (\gls{odfw}) provided updated historical recreational removals
-for Oregon from 1979 through 2000 (Whitman 2024). The Washington
-Department of Fish and Wildlife (\gls{wdfw}) provided updated historical
-recreational removals (1967-1989) and \gls{osp} estimates (1990-2001).
-The historical recreational removals for 1971, 1974, and 1979 were not
-available and were filled in as the average of the two preceding and two
-following years. Historical data were filtered to marine catch areas
-1-4. For \gls{osp} catch estimates, data included marine catch areas
-1-4, up to the Bonilla-Tatoosh line. \gls{wdfw} also provided updated
-catch estimates for 2002-2004, which did not include discard mortality.
-To adjust for this, we multiplied the average discard mortality rate
-from the following five years (2005-2009) by the total discards to
-calculate total mortality for those years.
+represent total estimated removals. The (\gls{odfw}) provided updated
+historical recreational removals for Oregon from 1979 through 2000
+(Whitman 2024). The Washington Department of Fish and Wildlife
+(\gls{wdfw}) provided updated historical recreational removals
+(1967-1989) and \gls{osp} estimates (1990-2001). The historical
+recreational removals for 1971, 1974, and 1979 were not available and
+were filled in as the average of the two preceding and two following
+years. Historical data were filtered to marine catch areas 1-4. For
+\gls{osp} catch estimates, data included marine catch areas 1-4, up to
+the Bonilla-Tatoosh line. \gls{wdfw} also provided updated catch
+estimates for 2002-2004, which did not include discard mortality. To
+adjust for this, we multiplied the average discard mortality rate from
+the following five years (2005-2009) by the total discards to calculate
+total mortality for those years.
 
 \subsubsection{Fishery-Dependent Length and Age
 Compositions}\label{sec-fd_comps}
@@ -1337,7 +1337,7 @@ number of fish. Then, we applied that regression to the total number of
 fish for data between 2017 and 2024 to estimate the number of samples. A
 future benchmark assessment should investigate how to get the number of
 sampled trips from \gls{recfin} to calculate the number of samples using
-the I. J. Stewart and Hamel (2014) method.
+the Stewart and Hamel (2014) method.
 
 We also found that \gls{caal} data from the 2017 assessment had all
 sample sizes and relative proportions doubled, potentially from when
@@ -1451,10 +1451,10 @@ hours), sample depth, and bag limits and other relevant regulations
 The unfiltered data set contained 18,410 drifts. Multiple standardized
 filters are applied to remove outliers and data unsuitable for an index.
 These filters are very similar to filters applied in 2017 and include
-drifts without data needed for CPUE information, long drifts (above 95th
-percentile), drifts in deeper waters (more than 64fm, 99th percentile),
-drifts that were targeting primarily mid-water species, and drifts
-outside of the legal fishing depth (with a five fm buffer).
+removing drifts without data needed for CPUE information, long drifts
+(above 95th percentile), drifts in deeper waters (more than 64fm, 99th
+percentile), drifts that were targeting primarily mid-water species, and
+drifts outside of the legal fishing depth (with a five fm buffer).
 Additionally, years with extremely low sample sizes (\textless50) were
 excluded. Finally, drifts on charters from Port Orford were removed due
 to small sample sizes. The final filtered data set included 6,839 trips
@@ -1466,10 +1466,10 @@ fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of
 drift covariate. This is in contrast to the 2017 index, which was only
 able to evaluate a year covariate. The covariates listed above are
 standard to evaluate for this index in other assessments. Negative
-binomial models were fit using \gls{sdmtmb} (version 0.6.0; Anderson et
-al. (2024)) to the drift-level data (catch with a log offset for
-adjusted angler hours). A model without the open fishing depths or month
-was selected as the best fit model by AIC
+binomial models were fit using \gls{sdmtmb} version 0.6.0 (Anderson et
+al. 2024)) to the drift-level data (catch with a log offset for adjusted
+angler hours). A model without the open fishing depths or month was
+selected as the best fit model by AIC
 Table~\ref{tbl-yelloweye_model_selection_ORFS}. Acceptable diagnostics
 for the model were achieved, as evidenced by passing the sanity function
 in \gls{sdmtmb} (Figure~\ref{fig-orfs_qqplot}). The index of abundance
@@ -1521,13 +1521,13 @@ adjusted angler hours). The final model selected includes year, month,
 port, boat type and open fishery depths, which was the best fit model by
 AIC in this series Table~\ref{tbl-yelloweye_model_selection_ORBS}.
 Acceptable diagnostics for the model were achieved, as evidenced by
-passing the sanity function in \gls{sdmtmb}.(Figure~\ref{fig-orbs_qq}).
+passing the sanity function in \gls{sdmtmb} (Figure~\ref{fig-orbs_qq}).
 The index of abundance in shown in Figure~\ref{fig-ORBS_index}. ODFW no
 longer maintains the deltaGLM code that was used to develop the 2017
 index and so the index was updated to use the currently accepted
 modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb},
 version 0.6.0; Anderson et al. (2024)). To bridge this change, the 2017
-model index structure was applied to the current dataset using
+model index structure was applied to the current data set using
 \gls{sdmtmb} and compared to the deltaGLM index used in the 2017
 assessment and the current recommended updated index in
 Figure~\ref{fig-ORBS_comp}. There are some differences observed in 2005
@@ -2427,16 +2427,16 @@ Rockfish (Sebastes Ruberrimus) Is Consistent with a Major Oceanographic
 Division in British Columbia, Canada.''} \emph{PloS One} 8.
 \url{https://doi.org/p.e71083}.
 
-\bibitem[\citeproctext]{ref-stewart_bootstrapping_2014}
-Stewart, I. J., and O. S. Hamel. 2014. {``Bootstrapping of Sample Sizes
-for Length- or Age-Composition Data Used in Stock Assessments.''}
-\emph{Canadian Journal of Fisheries and Aquatic Sciences} 71 (4):
-581--88. \url{https://doi.org/10.1139/cjfas-2013-0289}.
-
 \bibitem[\citeproctext]{ref-stewart_status_2009}
 Stewart, I. J, J. R. Wallace, and C. McGilliard. 2009. {``Status of the
 {U}.{S}. Yelloweye Rockfish Resource in 2009.''} 7700 Ambassador Place
 NE, Suite 200, Portland, OR: Pacific Fishery Management Council.
+
+\bibitem[\citeproctext]{ref-stewart_bootstrapping_2014}
+Stewart, and Hamel. 2014. {``Bootstrapping of Sample Sizes for Length-
+or Age-Composition Data Used in Stock Assessments.''} \emph{Canadian
+Journal of Fisheries and Aquatic Sciences} 71 (4): 581--88.
+\url{https://doi.org/10.1139/cjfas-2013-0289}.
 
 \bibitem[\citeproctext]{ref-Taylor_r4ss_lessons_2021}
 Taylor, I. G., K. L. Doering, K. L. Johnson, C. R. Wetzel, and I. J.
@@ -3852,7 +3852,7 @@ Mgmt & Year & Catch & Low Spawn & Low Frac & Base Spawn & Base Frac & High Spawn
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/data_plot.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/data_plot.png}}
 
 }
 
@@ -3878,7 +3878,7 @@ tons (mt) between 1889 and 2024 for each fleet.}
 
 \centering{
 
-\includegraphics[width=7in,height=\textheight,keepaspectratio]{figures/indices/ORFS_qq.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/indices/ORFS_qq.png}}
 
 }
 
@@ -3891,7 +3891,7 @@ model fit for the Oregon Onboard Observer (ORFS) index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index1_cpuedata_9_OR_RECOB.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index1_cpuedata_9_OR_RECOB.png}}
 
 }
 
@@ -3904,7 +3904,7 @@ the Oregon Onboard Observer (ORFS) index.}
 
 \centering{
 
-\includegraphics[width=10in,height=\textheight,keepaspectratio]{figures/indices/ORFS index comparison_errbars.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/indices/ORFS index comparison_errbars.png}}
 
 }
 
@@ -3917,7 +3917,7 @@ indices from the 2017 and the current assessment.}
 
 \centering{
 
-\includegraphics[width=7in,height=\textheight,keepaspectratio]{figures/indices/ORBS_qq.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/indices/ORBS_qq.png}}
 
 }
 
@@ -3930,7 +3930,7 @@ fit for the updated portion of the Oregon recreational (ORBS) index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index1_cpuedata_6_OR_REC.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index1_cpuedata_6_OR_REC.png}}
 
 }
 
@@ -3946,7 +3946,7 @@ ORBS (2004 - 2024) indices.}
 
 \centering{
 
-\includegraphics[width=10in,height=\textheight,keepaspectratio]{figures/indices/ORBS index comparison_ORBSonly_errbars.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/indices/ORBS index comparison_ORBSonly_errbars.png}}
 
 }
 
@@ -3960,7 +3960,7 @@ current ORBS index (sdmTMB).}
 
 \centering{
 
-\includegraphics[width=7in,height=\textheight,keepaspectratio]{figures/indices/wcgbts_qq.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/indices/wcgbts_qq.png}}
 
 }
 
@@ -3974,7 +3974,7 @@ model fit for the NWFSC West Coast Groundfish Bottom Trawl Survey
 
 \centering{
 
-\includegraphics[width=5.05in,height=\textheight,keepaspectratio]{figures/indices/wcgbts_index_comparison.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/indices/wcgbts_index_comparison.png}}
 
 }
 
@@ -3988,7 +3988,7 @@ index of abundance.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index1_cpuedata_11_NWFSC_ORWA.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index1_cpuedata_11_NWFSC_ORWA.png}}
 
 }
 
@@ -4001,7 +4001,7 @@ the West Coast Groundfish Bottom Trawl Survey (WCGBTS).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index1_cpuedata_12_IPHC_ORWA.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index1_cpuedata_12_IPHC_ORWA.png}}
 
 }
 
@@ -4027,7 +4027,7 @@ current IPHC index of abundance.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_lendat_flt11mkt0.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_lendat_flt11mkt0.png}}
 
 }
 
@@ -4040,7 +4040,7 @@ the WCBTS.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_lendat_flt12mkt0.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_lendat_flt12mkt0.png}}
 
 }
 
@@ -4055,7 +4055,7 @@ the IPHC longline survey.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALdat_bubflt11mkt0_page1.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALdat_bubflt11mkt0_page1.png}}
 
 }
 
@@ -4068,7 +4068,7 @@ age-at-length data for the WCBTS (1 of 2).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALdat_bubflt11mkt0_page2.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALdat_bubflt11mkt0_page2.png}}
 
 }
 
@@ -4081,7 +4081,7 @@ age-at-length data for the WCBTS (2 of 2).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALdat_bubflt12mkt0_page1.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALdat_bubflt12mkt0_page1.png}}
 
 }
 
@@ -4094,7 +4094,7 @@ age-at-length data for the IPHC (1 of 2).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALdat_bubflt12mkt0_page2.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALdat_bubflt12mkt0_page2.png}}
 
 }
 
@@ -4107,7 +4107,7 @@ age-at-length data for the IPHC (1 of 2).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/bio5_weightatsize.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/bio5_weightatsize.png}}
 
 }
 
@@ -4119,7 +4119,7 @@ age-at-length data for the IPHC (1 of 2).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/3_extendedcatch/compare2_spawnbio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/3_extendedcatch/compare2_spawnbio_uncertainty.png}}
 
 }
 
@@ -4133,7 +4133,7 @@ catch data (red), and catch extened to 2024 (green).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/3_extendedcatch/compare4_Bratio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/3_extendedcatch/compare4_Bratio_uncertainty.png}}
 
 }
 
@@ -4148,7 +4148,7 @@ management target and minimum stock size threshold.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/3_extendedcatch/compare18_smrybio.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/3_extendedcatch/compare18_smrybio.png}}
 
 }
 
@@ -4163,7 +4163,7 @@ Rockfish biomass of the 2017 model with an updated SS3 executable
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/5_newindices/compare2_spawnbio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/5_newindices/compare2_spawnbio_uncertainty.png}}
 
 }
 
@@ -4178,7 +4178,7 @@ extended historical catch data (green), updated historical indices
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/14_tunecomps/compare2_spawnbio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/14_tunecomps/compare2_spawnbio_uncertainty.png}}
 
 }
 
@@ -4193,7 +4193,7 @@ composition data (green).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/14_tunecomps/compare11_recdevs.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/14_tunecomps/compare11_recdevs.png}}
 
 }
 
@@ -4208,7 +4208,7 @@ and indices (red), and all tuned length and age composition data
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/19_last_bridge/compare2_spawnbio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/19_last_bridge/compare2_spawnbio_uncertainty.png}}
 
 }
 
@@ -4223,7 +4223,7 @@ all final bridging steps (green).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/19_last_bridge/compare4_Bratio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/19_last_bridge/compare4_Bratio_uncertainty.png}}
 
 }
 
@@ -4239,7 +4239,7 @@ minimum stock size threshold.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/bridging/1_SS3exe/compare4_Bratio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/1_SS3exe/compare4_Bratio_uncertainty.png}}
 
 }
 
@@ -4254,7 +4254,7 @@ model with the updated SS3 executable and a single-sex model.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/bio1_sizeatage.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/bio1_sizeatage.png}}
 
 }
 
@@ -4267,7 +4267,7 @@ the ending year of the model.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/recruit_fit_bias_adjust.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/recruit_fit_bias_adjust.png}}
 
 }
 
@@ -4284,7 +4284,7 @@ adjustment relationship for recruitment deviations.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/sel01_multiple_fleets_length1.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/sel01_multiple_fleets_length1.png}}
 
 }
 
@@ -4297,7 +4297,7 @@ all fleets.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/bio10_spawningoutput_len.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/bio10_spawningoutput_len.png}}
 
 }
 
@@ -4309,7 +4309,7 @@ all fleets.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/SR_curve.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/SR_curve.png}}
 
 }
 
@@ -4323,7 +4323,7 @@ showing later years.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/recdevs2_withbars.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/recdevs2_withbars.png}}
 
 }
 
@@ -4338,7 +4338,7 @@ showing later years.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_3_CA_REC.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_3_CA_REC.png}}
 
 }
 
@@ -4351,7 +4351,7 @@ index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_6_OR_REC.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_6_OR_REC.png}}
 
 }
 
@@ -4363,7 +4363,7 @@ index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_7_WA_REC.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_7_WA_REC.png}}
 
 }
 
@@ -4375,7 +4375,7 @@ index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_8_CACPFV.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_8_CACPFV.png}}
 
 }
 
@@ -4388,7 +4388,7 @@ index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_9_OR_RECOB.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_9_OR_RECOB.png}}
 
 }
 
@@ -4401,7 +4401,7 @@ index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_10_TRI_ORWA.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_10_TRI_ORWA.png}}
 
 }
 
@@ -4413,7 +4413,7 @@ index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_11_NWFSC_ORWA.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_11_NWFSC_ORWA.png}}
 
 }
 
@@ -4425,7 +4425,7 @@ index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_12_IPHC_ORWA.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/index5_logcpuefit_12_IPHC_ORWA.png}}
 
 }
 
@@ -4439,7 +4439,7 @@ index.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_lenfit__aggregated_across_time.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_lenfit__aggregated_across_time.png}}
 
 }
 
@@ -4452,7 +4452,7 @@ aggregated across time by fleet.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_lenfit__page1_multi-fleet_comparison.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_lenfit__page1_multi-fleet_comparison.png}}
 
 }
 
@@ -4467,7 +4467,7 @@ are negative residuals (observed \textless{} expected).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_lenfit__page2_multi-fleet_comparison.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_lenfit__page2_multi-fleet_comparison.png}}
 
 }
 
@@ -4482,7 +4482,7 @@ are negative residuals (observed \textless{} expected).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge2_CA_NONTWL.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge2_CA_NONTWL.png}}
 
 }
 
@@ -4497,7 +4497,7 @@ model expectation.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge3_CA_REC.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge3_CA_REC.png}}
 
 }
 
@@ -4512,7 +4512,7 @@ model expectation.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge4_ORWA_TWL.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge4_ORWA_TWL.png}}
 
 }
 
@@ -4527,7 +4527,7 @@ model expectation.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge5_ORWA_NONTWL.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge5_ORWA_NONTWL.png}}
 
 }
 
@@ -4542,7 +4542,7 @@ model expectation.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge6_OR_REC.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge6_OR_REC.png}}
 
 }
 
@@ -4557,7 +4557,7 @@ model expectation.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge7_WA_REC.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge7_WA_REC.png}}
 
 }
 
@@ -4572,7 +4572,7 @@ model expectation.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge11_NWFSC_ORWA.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge11_NWFSC_ORWA.png}}
 
 }
 
@@ -4587,7 +4587,7 @@ expectation.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge12_IPHC_ORWA.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/comp_condAALfit_data_weighting_TA1-8_condAge12_IPHC_ORWA.png}}
 
 }
 
@@ -4602,7 +4602,7 @@ expectation.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts7_Spawning_output_with_95_intervals.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts7_Spawning_output_with_95_intervals.png}}
 
 }
 
@@ -4615,7 +4615,7 @@ for both areas combined.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts8_Spawning_output_by_area.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts8_Spawning_output_by_area.png}}
 
 }
 
@@ -4628,7 +4628,7 @@ by area (Area 1 is California, Area 2 is Oregon/Washington combined).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts9_Relative_spawning_output_intervals.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts9_Relative_spawning_output_intervals.png}}
 
 }
 
@@ -4642,7 +4642,7 @@ output estimated in the assessment model (solid line) with
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts10_Relative_spawning_output.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts10_Relative_spawning_output.png}}
 
 }
 
@@ -4655,7 +4655,7 @@ estimated by area (area 1= California, area 2 = Oregon and Washington).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts2_Total_biomass_(t)_by_area.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts2_Total_biomass_(t)_by_area.png}}
 
 }
 
@@ -4668,7 +4668,7 @@ estimated by area (area 1= California, area 2 = Oregon and Washington).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts5_Summary_biomass_(t)_by_area.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts5_Summary_biomass_(t)_by_area.png}}
 
 }
 
@@ -4683,7 +4683,7 @@ estimated by area (area 1= California, area 2 = Oregon and Washington).}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts11_Age-0_recruits_(1000s)_with_95_asymptotic_intervals.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts11_Age-0_recruits_(1000s)_with_95_asymptotic_intervals.png}}
 
 }
 
@@ -4696,7 +4696,7 @@ the assessment model with \textasciitilde{} 95\% interval.}
 
 \centering{
 
-\includegraphics[width=9in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_jitter_0.1/jitter.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_jitter_0.1/jitter.png}}
 
 }
 
@@ -4710,7 +4710,7 @@ indicates base model value.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/sensitivities/modelingcompare2_spawnbio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/sensitivities/modelingcompare2_spawnbio_uncertainty.png}}
 
 }
 
@@ -4723,7 +4723,7 @@ structure sensitivities.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/sensitivities/modelingcompare4_Bratio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/sensitivities/modelingcompare4_Bratio_uncertainty.png}}
 
 }
 
@@ -4736,7 +4736,7 @@ model structure sensitivities.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/sensitivities/comp_datacompare2_spawnbio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/sensitivities/comp_datacompare2_spawnbio_uncertainty.png}}
 
 }
 
@@ -4749,7 +4749,7 @@ inclusion sensitivities.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/sensitivities/comp_datacompare4_Bratio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/sensitivities/comp_datacompare4_Bratio_uncertainty.png}}
 
 }
 
@@ -4762,7 +4762,7 @@ dataset inclusion sensitivities.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/sensitivities/indicescompare2_spawnbio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/sensitivities/indicescompare2_spawnbio_uncertainty.png}}
 
 }
 
@@ -4775,7 +4775,7 @@ inclusion sensitivities.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/sensitivities/indicescompare4_Bratio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/sensitivities/indicescompare4_Bratio_uncertainty.png}}
 
 }
 
@@ -4790,7 +4790,7 @@ index inclusion sensitivities.}
 
 \centering{
 
-\includegraphics[width=6in,height=\textheight,keepaspectratio]{figures/sensitivities/sens_summary.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/sensitivities/sens_summary.png}}
 
 }
 
@@ -4803,7 +4803,7 @@ across models conducted as sensitivities.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_retro_5_yr_peel/compare2_spawnbio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_retro_5_yr_peel/compare2_spawnbio_uncertainty.png}}
 
 }
 
@@ -4817,7 +4817,7 @@ Spawning output time series of this assesment base model are proved with
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_retro_5_yr_peel/compare4_Bratio_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_retro_5_yr_peel/compare4_Bratio_uncertainty.png}}
 
 }
 
@@ -4831,7 +4831,7 @@ proved with \textasciitilde95\% interval.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_retro_5_yr_peel/compare12_recdevs_uncertainty.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_retro_5_yr_peel/compare12_recdevs_uncertainty.png}}
 
 }
 
@@ -4844,7 +4844,7 @@ for each scenario of the retrospective analysis.}
 
 \centering{
 
-\includegraphics[width=7.6in,height=\textheight,keepaspectratio]{figures/bridging/Timeseries_comp_previous_assessments.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/bridging/Timeseries_comp_previous_assessments.png}}
 
 }
 
@@ -4857,7 +4857,7 @@ across Yelloweye Rockfish assessments over time.}
 
 \centering{
 
-\includegraphics[width=7in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_profile_NatM_break_1_Fem_GP_1/piner_panel_NatM_break_1_Fem_GP_1.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_profile_NatM_break_1_Fem_GP_1/piner_panel_NatM_break_1_Fem_GP_1.png}}
 
 }
 
@@ -4873,7 +4873,7 @@ ranging from 0.03 to 0.06 in increments of 0.002.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_profile_NatM_break_1_Fem_GP_1/NatM_break_1_Fem_GP_1_trajectories_compare3_Bratio.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_profile_NatM_break_1_Fem_GP_1/NatM_break_1_Fem_GP_1_trajectories_compare3_Bratio.png}}
 
 }
 
@@ -4887,7 +4887,7 @@ ranging from 0.03 to 0.06 in increments of 0.002.}
 
 \centering{
 
-\includegraphics[width=7in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_BH_steep/piner_panel_SR_BH_steep.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_BH_steep/piner_panel_SR_BH_steep.png}}
 
 }
 
@@ -4901,7 +4901,7 @@ steepness ranging from 0.25 to 1.0 by increments of 0.05.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_BH_steep/SR_BH_steep_trajectories_compare3_Bratio.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_BH_steep/SR_BH_steep_trajectories_compare3_Bratio.png}}
 
 }
 
@@ -4915,7 +4915,7 @@ from 0.25 to 1.0 in increments of 0.05.}
 
 \centering{
 
-\includegraphics[width=7in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_LN(R0)/piner_panel_SR_LN(R0).png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_LN(R0)/piner_panel_SR_LN(R0).png}}
 
 }
 
@@ -4929,7 +4929,7 @@ recruitment (lnR0) ranging from 4.5 to 6.0 by increments of 0.15.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_LN(R0)/SR_LN(R0)_trajectories_compare1_spawnbio.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_LN(R0)/SR_LN(R0)_trajectories_compare1_spawnbio.png}}
 
 }
 
@@ -4942,7 +4942,7 @@ values of lnR0.}
 
 \centering{
 
-\includegraphics[width=7in,height=\textheight,keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_LN(R0)/parameter_panel_SR_LN(R0).png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/diagnostics/2025_base_model_profile_SR_LN(R0)/parameter_panel_SR_LN(R0).png}}
 
 }
 
@@ -4961,7 +4961,7 @@ estimate.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/SPR1_series.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/SPR1_series.png}}
 
 }
 
@@ -4973,7 +4973,7 @@ estimate.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/yield1_yield_curve.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/yield1_yield_curve.png}}
 
 }
 
@@ -4988,7 +4988,7 @@ relative spawning output is relative to unfished spawning biomass.}
 
 \centering{
 
-\includegraphics[width=6.5in,height=\textheight,keepaspectratio]{figures/r4ss_plots/plots/ts10_Relative_spawning_output.png}
+\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/ts10_Relative_spawning_output.png}}
 
 }
 
