--- a/report/04a_model_summary.qmd
+++ b/report/04a_model_summary.qmd
@@ -60,7 +60,9 @@ Additional variance was estimated and added to the input variance for all indice
 
 ### Model Parameters
 
-The base model had `r sum(mod_out$parameters$Phase > 0)` estimated parameters (tallied by type in @tbl-n-param). A single-sex growth curve was estimated (@fig-growth). Natural mortality was fixed, as in the 2017 assessment. Unfished recruitment and the distribution of recruits between areas are estimated. Steepness of the stock-recruit relationship was kept fixed at 0.718, matching the 2017 assessment. Estimating steepness was evaluated as a sensitivity. Recruitment deviations during the "main" period (from `r mod_in$ctl$MainRdevYrFirst` to `r mod_in$ctl$MainRdevYrLast`) were forced to sum to zero and the bias adjustment ramp was updated (@fig-biasadj). 
+The base model had `r sum(mod_out$parameters$Phase > 0)` estimated parameters (tallied by type in @tbl-n-param). A single-sex growth curve was estimated (@fig-growth). Natural mortality was fixed, as in the 2017 assessment. Unfished recruitment and the distribution of recruits between areas are estimated. Steepness of the stock-recruit relationship was fixed at 0.72, updated from the 2017 assessment which was fixed at 0.718. Estimating steepness was evaluated as a sensitivity. Recruitment deviations during the "main" period (from `r mod_in$ctl$MainRdevYrFirst` to `r mod_in$ctl$MainRdevYrLast`) were forced to sum to zero and the bias adjustment ramp was updated (@fig-biasadj). 
+
+Catchability parameters, we extended the time block on catchability parameter for the OR rec index to 2004 to encompass additional data. To fit these data we extimated the catchability offset between MRFFS and ORBS, both are in fleet 6. In order to estiamte it we set Float to 0 and Phase to 1.
 
 All selectivity was assumed to be length-based and used a double-normal functional form. Selectivities for all fleets was estimated to be asymptotic (@fig-selex_allfleets), though selectivity for the California Onboard Observer CPUE was mirrored to the California recreational fleet. Selectivity was constant through time. Dome-shaped selectivity and various time blocks for specific fleets were explored in @gertseva_stock_2017 but not re-evaluated in this update assessment.   
 
